# py-data

./: .gitignore  README.md
.github/workflows/: data.yaml  format.yaml
format/: README.md  pyproject.toml
format/davidkhala/data/format/arrow/: __init__.py  fs.py  gcp.py  local_fs.py  parquet.py
format/davidkhala/data/format/avro/: __init__.py
format/davidkhala/data/format/parquet/: __init__.py
format/davidkhala/data/format/transform/: __init__.py
format/tests/: arrow_test.py  avro_test.py  ci.py  parquet_test.py
format/tests/artifacts/: gcp-data-davidkhala.dbt_davidkhala.country_codes.batch.arrow  gcp-data-davidkhala.dbt_davidkhala.country_codes.stream.arrow
format/tests/fixtures/: gcp-data-davidkhala.dbt_davidkhala.country_codes.avro
frame/: .gitignore  README.md  pyproject.toml
frame/davidkhala/data/frame/: pretty.py
frame/davidkhala/data/frame/pandas/: __init__.py
frame/tests/: pandas_test.py  pola_test.py  pretty_test.py
integration/: pyproject.toml
integration/davidkhala/data/integration/from/: pandas.py
integration/davidkhala/data/integration/source/: arrow.py
integration/davidkhala/data/integration/to/: arrow.py
integration/tests/: from_arrow_test.py
integration/tests/fixtures/: gcp-data-davidkhala.dbt_davidkhala.country_codes.parquet
science/: pyproject.toml
science/davidkhala/data/science/: stats.py
visualization/: pyproject.toml
visualization/app/dash/: Dockerfile  gapminder_unfiltered.py
visualization/app/streamlit/: deepdiff_json.py  native_git.py  native_table.py
visualization/davidkhala/data/visualization/matplotlib/: README.md
