[project]
name = "davidkhala.data.format"
version = "0.0.5"
description = ""
authors = [{ name = "David Liu", email = "david-khala@hotmail.com" }]
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
avro = ["fastavro"]
arrow = ["pyarrow"]
gcp = ["davidkhala-gcp"]

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
