[project]
name = "davidkhala.data.science"
version = "0.0.0"
description = "davidkhala is a data scientist"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy",
]

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"