[project]
name = "davidkhala.data.visualization"
version = "0.0.0"
description = "data visualization tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dash = ["dash"]
streamlit = ["streamlit"]


[dependency-groups]
dev = ["pytest","pandas"]

[tool.hatch.build.targets.sdist]
include = ["davidkhala"]

[tool.hatch.build.targets.wheel]
include = ["davidkhala"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"